Fix: overflow input text

--- a/src/pages/chat/components/MessagePanel/partial/FormMessage/FormMessage.less
+++ b/src/pages/chat/components/MessagePanel/partial/FormMessage/FormMessage.less
@@ -5,7 +5,7 @@
   border-right: 1px solid #dddddd35;
   .chat {
     display: grid;
-    grid-template-rows: 1fr 62px;
+    grid-template-rows: 1fr minmax(62px, max-content);
     height: calc(100dvh - 72px);
     .center {
       overflow-y: auto;
